deployment/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: luxe-staycations
  labels:
    name: luxe-staycations
    environment: production
    project: luxury-villa-rental
